@@ -13,7 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.intellij.lang.xpath.xslt.impl.references;
 
 import com.intellij.codeInspection.LocalQuickFix;
@@ -36,69 +35,66 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Objects;
 
-class ExternalResourceReference implements PsiReference, LocalQuickFixProvider {
-  private final XmlAttribute myAttribute;
-  private final ExternalResourceManager myResourceManager = ExternalResourceManager.getInstance();
+final class ExternalResourceReference implements PsiReference, LocalQuickFixProvider {
+  private final XmlAttribute attribute;
+  private final ExternalResourceManager resourceManager = ExternalResourceManager.getInstance();
 
   ExternalResourceReference(XmlAttribute attribute) {
-    myAttribute = attribute;
+    this.attribute = attribute;
   }
 
   @Override
   public @NotNull LocalQuickFix @Nullable [] getQuickFixes() {
-    return new LocalQuickFix[] { new DownloadResourceFix(myAttribute.getValue()) };
+    return new LocalQuickFix[] { new DownloadResourceFix(attribute.getValue()) };
   }
 
 
   @Override
-  @NotNull
-  public PsiElement getElement() {
-    return myAttribute.getValueElement();
+  public @NotNull PsiElement getElement() {
+    return attribute.getValueElement();
   }
 
   @Override
-  @NotNull
-  public TextRange getRangeInElement() {
-    final XmlAttributeValue value = myAttribute.getValueElement();
+  public @NotNull TextRange getRangeInElement() {
+    final XmlAttributeValue value = attribute.getValueElement();
     return value != null ? TextRange.from(1, value.getTextLength() - 2) : TextRange.from(0, 0);
   }
 
   @Override
-  @Nullable
-  public PsiElement resolve() {
-    final String value = myAttribute.getValue();
-    final String resourceLocation = myResourceManager.getResourceLocation(value);
+  public @Nullable PsiElement resolve() {
+    String value = attribute.getValue();
+    String resourceLocation = value == null ? null : resourceManager.getResourceLocation(value, attribute.getProject());
+    if (Objects.equals(resourceLocation, value)) {
+      return null;
+    }
 
-    if (!Objects.equals(resourceLocation, value)) {
-      VirtualFile file;
+    VirtualFile file;
+    try {
+      file = VfsUtil.findFileByURL(new URL(resourceLocation));
+    }
+    catch (MalformedURLException e) {
       try {
-        file = VfsUtil.findFileByURL(new URL(resourceLocation));
+        file = VfsUtil.findFileByURL(new File(resourceLocation).toURI().toURL());
       }
-      catch (MalformedURLException e) {
-        try {
-          file = VfsUtil.findFileByURL(new File(resourceLocation).toURI().toURL());
-        }
-        catch (MalformedURLException e1) {
-          file = null;
-        }
+      catch (MalformedURLException e1) {
+        file = null;
       }
-      if (file != null) {
-        return myAttribute.getManager().findFile(file);
-      }
+    }
+    if (file != null) {
+      return attribute.getManager().findFile(file);
     }
     return null;
   }
 
   @Override
-  @NotNull
-  public String getCanonicalText() {
-    return myAttribute.getValue();
+  public @NotNull String getCanonicalText() {
+    return attribute.getValue();
   }
 
   @Override
   public PsiElement handleElementRename(@NotNull String newElementName) throws IncorrectOperationException {
-    myAttribute.setValue(newElementName);
-    final XmlAttributeValue value = myAttribute.getValueElement();
+    attribute.setValue(newElementName);
+    final XmlAttributeValue value = attribute.getValueElement();
     assert value != null;
     return value;
   }
@@ -115,7 +111,7 @@ class ExternalResourceReference implements PsiReference, LocalQuickFixProvider {
 
   @Override
   public Object @NotNull [] getVariants() {
-    return myResourceManager.getResourceUrls(null, false);
+    return resourceManager.getResourceUrls(null, false);
   }
 
   @Override
